Fix design color on mobile page

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -495,7 +495,7 @@ header nav i {
     margin-left: 10%;
     line-height: 16px;
     text-align: left;
-    color: #172B4D;
+    color: #EBEBFF;
   }
 
   
